<?xml version="1.0" encoding="utf-8"?>
<com.readboy.wearlauncher.view.NegativeScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/negative_screen_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/status_bar_height"
            android:clipToPadding="false"
            android:paddingBottom="5dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:splitMotionEvents="false">

                <RelativeLayout
                    android:id="@+id/bell_bid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/negative_list_item_height"
                    android:background="@drawable/negative_screen_item_bg">
                    <ImageView
                        android:id="@+id/ring_ivid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/negative_list_item_icon_left"
                        android:src="@drawable/negative_icon_ring"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/ring_ivid"
                        android:layout_marginLeft="@dimen/negative_list_item_text_left"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/negative_list_item_title_text_size"
                            android:text="@string/negative_item_bell"
                            android:textColor="@color/negative_title_color_selector"/>
                        <TextView
                            android:id="@+id/ring_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textSize="20sp"
                            android:text="@string/negative_item_bell"
                            android:textColor="@color/negative_subtitle_color_selector"
                            android:visibility="gone"/>
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/weather_bid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/negative_list_item_height"
                    android:layout_marginTop="@dimen/negative_list_item_spacing"
                    android:background="@drawable/negative_screen_item_bg">
                    <ImageView
                        android:id="@+id/weather_ivid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/negative_list_item_icon_left"
                        android:src="@drawable/negative_icon_weather"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/weather_ivid"
                        android:layout_marginLeft="@dimen/negative_list_item_text_left"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/negative_list_item_title_text_size"
                            android:text="@string/negative_item_weather"
                            android:textColor="@color/negative_title_color_selector"/>
                        <TextView
                            android:id="@+id/weather_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textSize="20sp"
                            android:text="@string/negative_item_weather"
                            android:textColor="@color/negative_subtitle_color_selector"
                            android:visibility="gone"/>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_bid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/negative_list_item_height"
                    android:layout_marginTop="@dimen/negative_list_item_spacing"
                    android:background="@drawable/negative_screen_item_bg">
                    <ImageView
                        android:id="@+id/settings_ivid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/negative_list_item_icon_left"
                        android:src="@drawable/negative_icon_settings"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/settings_ivid"
                        android:layout_marginLeft="@dimen/negative_list_item_text_left"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/negative_list_item_title_text_size"
                        android:textColor="@color/negative_title_color_selector"
                        android:text="@string/negative_item_setting"/>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <!--status bar-->
        <LinearLayout
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height"
            android:orientation="horizontal"
            android:gravity="center_vertical|right"
            android:layout_gravity="center"
            android:background="#000000">
            <include
                layout="@layout/signal_cluster_view"
                android:id="@+id/signal_cluster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8px"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/btn_id_classdisable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"/>
            <ImageView
                android:id="@+id/btn_id_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"/>
            <ImageView
                android:id="@+id/btn_id_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"/>
            <ImageView
                android:id="@+id/btn_id_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"
                android:layout_marginRight="8px">
                <com.readboy.wearlauncher.battery.BatteryLevelImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!--<com.readboy.wearlauncher.battery.BatteryLevelTextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"/>-->
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>
</com.readboy.wearlauncher.view.NegativeScreen >
